--- a/gi-pro-mobile/www/templates/modal_newrequest.html
+++ b/gi-pro-mobile/www/templates/modal_newrequest.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<ion-modal-view class="modal-filter has-header">
   <ion-header-bar>
     <div class="title">{{'service_request' | translate}}</div>
     <button class="button button-stable button-clear icon ion-close" ng-click="closeNewRequestModal()"></button>
