--- a/gi-pro-mobile/www/templates/professionalWithServices.html
+++ b/gi-pro-mobile/www/templates/professionalWithServices.html
@@ -1,20 +1,20 @@
 <ion-view view-title="{{profile.name}} {{profile.surname}}" class="prof-details">
   <ion-nav-buttons side="right">
-    <button class="button button-icon button-clear" ng-class="{'ion-edit': !editing, 'ion-checkmark': editing}" ng-click="toggleEditing()"
-      ng-show="isMyProfile && isOnProfile"></button>
-    <button class="button button-icon button-clear ion-plus" ng-click="addNewService()" ng-show="isMyProfile && !isOnProfile"></button>
+    <button class="button button-icon button-clear" ng-click="(isMyProfile && selectedTab === 'profile') ? toggleEditingProfile() : openNewServiceModal()"
+      ng-class="{'ion-edit': (!editingProfile && isMyProfile && selectedTab === 'profile'), 'ion-checkmark': (editingProfile && isMyProfile && selectedTab === 'profile'), 'ion-plus': (isMyProfile && selectedTab === 'services')}">
+    </button>
   </ion-nav-buttons>
   <ion-tabs class="tabs-calm">
     <!-- INFO -->
-    <ion-tab title="{{'prof_info' | translate | uppercase}}" on-select="selectProfile()">
+    <ion-tab title="{{'prof_info' | translate | uppercase}}" on-select="selectTab('profile')">
       <ion-pane>
         <div ng-include="'templates/include_professional.html'" onload="init()"></div>
       </ion-pane>
     </ion-tab>
     <!-- SERVICES -->
-    <ion-tab title="{{'prof_services' | translate | uppercase}}" on-select="selectServices()">
+    <ion-tab title="{{'prof_services' | translate | uppercase}}" on-select="selectTab('services')">
       <ion-pane>
-        <ion-content>
+        <ion-content class="prof-services">
           <!--
           <ion-list>
             <div ng-repeat="service in services">
@@ -27,76 +27,67 @@
             </div>
           </ion-list>
           -->
-          <ion-list class="list-accordion">
-            <div class="item-accordion" ng-if="newServiceMode">
+          <ion-list class="list-accordion" type="list-inset">
+            <!-- New service-->
+            <div class="item-accordion" ng-if="addingNewService">
               <ion-item class="item-accordion-header item-icon-right">
-                <div>{{getServiceNameByID(newService.serviceType)}}</div>
-                <!--<i class="icon" ng-class="{'ion-arrow-down-b': !isActiveItem(entry), 'ion-arrow-up-b': isActiveItem(entry)}"></i>-->
+                <div class="title">{{getServiceNameByID(newService.serviceType)}}</div>
+                <!--<i class="icon" ng-class="{'ion-chevron-down': !isExpandedService(service.objectId), 'ion-chevron-up': isExpandedService(service.objectId)}"></i>-->
               </ion-item>
-              <ion-item class="item-accordion-content">
-                <div class="row">
+              <ion-item class="item-accordion-content item-icon-left item-icon-right" ng-if="newService.serviceType !== 'sostituzioneudienza'">
+                <div class="item item-icon-left item-icon-right">
                   <i class="icon ion-ios-location"></i>
                   <placeautocomplete ng-model="newService.address" attr-placeholder="{{'service_address_placeholder' | translate}}" click-activation="false"
                     data="places" on-type="typePlace" placeholder="{{'service_address_placeholder' | translate}}" on-select="changeStringFrom"
                     ng-blur="setNameParam"></placeautocomplete>
-                  <a class="button-icon plan-viaggia-fromto  icon ion-map" ng-click="openMapPlan('from')"></a>
+                  <i class="icon ion-map plan-viaggia-fromto" ng-click="openMapPlan('from')"></i>
                 </div>
-              </ion-item>
-              <ion-item class="item-accordion-content" ng-click="openAreaSelection('new')">
-                <div class="row">
-                  <i class="icon ion-android-locate"></i>
-                  <div> {{getAreaNamebuID(newService.area)}}</div>
+                <div class="item-icon-left item-icon-right" ng-if="newService.serviceType === 'sostituzioneudienza'">
+                  <i class="icon ion-ios-location"></i>
+                  <input type="text">
+                  <i class="icon ion-map plan-viaggia-fromto" ng-click="openMapPlan('from')"></i>
                 </div>
-              </ion-item>
-              <ion-item class="item-accordion-content">
-                <div class="row">
+                <div class="item-icon-left">
                   <i class="icon ion-ios-information"></i>
                   <input type="text" ng-model="newService.note" placeholder="{{'service_note_placeholder' | translate}}" autofocus>
                 </div>
-              </ion-item>
-              <ion-item class="item-accordion-content" ng-if="newServiceMode">
-                <button class="button" ng-click="cancelModify('new')">{{'cancel' | translate}}</button>
-                <button class="button" ng-click="saveService(newService)">{{'save' | translate}}</button>
+                <div class="item-accordion-footer">
+                  <button class="button button-outline button-small button-positive" ng-click="cancelModify('new')">{{'cancel' | translate}}</button>
+                  <button class="button button-outline button-small button-assertive" ng-click="saveService(newService)">{{'save' | translate}}</button>
+                </div>
               </ion-item>
             </div>
-            <div class="item-accordion" ng-repeat="service in services">
+            <!-- Services list -->
+            <div class="item-accordion" ng-repeat="service in services" ng-click="toggleService(service.objectId)">
               <ion-item class="item-accordion-header item-icon-right" ng-click="toggleService(service)">
-                <div>{{getServiceNameByID(service.serviceType)}}</div>
-                <!--<i class="icon" ng-class="{'ion-arrow-down-b': !isActiveItem(entry), 'ion-arrow-up-b': isActiveItem(entry)}"></i>-->
-                <i class="icon ion-arrow-down-b" ng-class="{'open': isServiceShown(service)}"></i>
+                <div class="title">{{getServiceNameByID(service.serviceType)}}</div>
+                <!--<i class="icon" ng-class="{'ion-chevron-down': !isExpandedService(service.objectId), 'ion-chevron-up': isExpandedService(service.objectId)}"></i>-->
+                <i class="icon ion-chevron-down" ng-class="{'open': isExpandedService(service.objectId)}"></i>
               </ion-item>
-              <ion-item class="item-accordion-content" ng-show="isServiceShown(service)">
-                <div class="row">
+              <ion-item class="item-accordion-content" ng-show="isExpandedService(service.objectId)">
+                <div class="item item-icon-left">
                   <i class="icon ion-ios-location"></i>
-                  <div ng-if="!editMode"> {{service.address}}</div>
-                  <!--                <input type="text" ng-if="editMode" ng-model="service.address" placeholder="Indirizzo" autofocus>-->
-                  <placeautocomplete ng-if="editMode" ng-model="newService.address" attr-placeholder="{{'service_address_placeholder' | translate}}"
+                  <div ng-if="!editingServices"> {{service.address}}</div>
+                  <!--<input type="text" ng-if="editingServices" ng-model="service.address" placeholder="Indirizzo" autofocus>-->
+                  <!--<placeautocomplete ng-if="editingServices" ng-model="newService.address" attr-placeholder="{{'service_address_placeholder' | translate}}"
                     click-activation="false" data="places" on-type="typePlace" placeholder="{{'service_address_placeholder' | translate}}"
                     on-select="changeStringFrom" ng-blur="setNameParam"></placeautocomplete>
-                  <a class="button-icon plan-viaggia-fromto  icon ion-map" ng-if="editMode" ng-click="openMapPlan('from')"></a>
+                  <a class="button-icon plan-viaggia-fromto  icon ion-map" ng-if="editingServices" ng-click="openMapPlan('from')"></a>-->
                 </div>
-              </ion-item>
-              <ion-item class="item-accordion-content" ng-click="openAreaSelection('edit')" ng-show="isServiceShown(service)">
-                <div class="row">
-                  <i class="icon ion-android-locate"></i>
-                  <div ng-if="!editMode"> {{getAreaNamebyID(service.area)}}</div>
-                  <div ng-if="editMode"> {{getAreaNamebyID(newService.area)}}</div>
-                </div>
-              </ion-item>
-              <ion-item class="item-accordion-content" ng-show="isServiceShown(service)">
-                <div class="row">
+                <div class="item item-icon-left">
                   <i class="icon ion-ios-information"></i>
-                  <div ng-if="!editMode"> {{service.note}}</div>
-                  <input type="text" ng-if="editMode" ng-model="newService.note" placeholder="{{'service_note_placeholder' | translate}}" autofocus>
+                  <div ng-if="!editingServices"> {{service.note}}</div>
+                  <!--<input type="text" ng-if="editingServices" ng-model="newService.note" placeholder="{{'service_note_placeholder' | translate}}"
+                      autofocus>-->
                 </div>
-              </ion-item>
-              <ion-item class="item-accordion-content" ng-show="isServiceShown(service)" ng-if="editMode">
-                <button class="button" ng-click="cancelModify('edit')">{{'cancel' | translate}}</button>
-                <button class="button" ng-click="saveService()">{{'save' | translate}}</button>
-              </ion-item>
-              <ion-item class="item-accordion-content" ng-show="isServiceShown(service)" ng-if="!editMode">
-                <button class="button" ng-click="deleteService(service)">{{'delete' | translate}}</button>
-                <button class="button" ng-click="modifyService(service)">{{'modify' | translate}}</button>
+                <div class="item item-accordion-content item-accordion-footer" ng-if="editingServices">
+                  <button class="button" ng-click="cancelModify('edit')">{{'cancel' | translate}}</button>
+                  <button class="button" ng-click="saveService()">{{'save' | translate}}</button>
+                </div>
+                <div class="item item-accordion-content item-accordion-footer" ng-if="!editingServices">
+                  <button class="button button-small button-outline button-assertive" ng-click="deleteService(service)">{{'delete' | translate}}</button>
+                  <!--<button class="button" ng-click="modifyService(service)">{{'modify' | translate}}</button>-->
+                </div>
               </ion-item>
             </div>
           </ion-list>
