--- a/gi-pro-mobile/www/templates/menu.html
+++ b/gi-pro-mobile/www/templates/menu.html
@@ -21,7 +21,7 @@
         <ion-item nav-clear menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.serviceAndProf">
           <i class="icon ion-home"></i> {{'home' | translate}}
         </ion-item>
-        <ion-item nav-clear menu-close class="item item-icon-left" ng-if="logged" ui-sref-active="active" ui-sref="app.reqAndOffer">
+        <ion-item nav-clear menu-close class="item item-icon-left" ng-if="logged" ui-sref-active="active" ui-sref="app.requestsAndOffers">
           <i class="icon ion-arrow-swap"></i> {{'reqandoff' | translate}}
         </ion-item>
         <ion-item nav-clear menu-close class="item item-icon-left" ng-if="logged" ui-sref-active="active" ui-sref="app.notifications">
