--- a/gi-pro-mobile/www/templates/serviceDetails.html
+++ b/gi-pro-mobile/www/templates/serviceDetails.html
@@ -12,7 +12,7 @@
         <div class="col col-67">
           <ul>
             <li class="name">{{service.professional.name}} {{service.professional.surname}}</li>
-            <li class="toprofile"><a ng-click="openProfessionalDetails(service.professional)">{{'service_viewprofile' | translate}}</a></li>
+            <li class="toprofile"><a ng-click="openProfessionalDetails(service.professional)">{{'view_profile' | translate}}</a></li>
           </ul>
         </div>
       </div>
@@ -23,7 +23,7 @@
         </div>
         <div class="item">
           <i class="icon ion-social-euro"></i>
-          <span>{{service.cost ? service.cost : ('service_cost_free' | translate)}}</span>
+          <span>{{service.cost ? service.cost : ('cost_free' | translate)}}</span>
         </div>
       </div>
       <div class="row">
